; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/qxl/extr_qxl_kms.c_setup_hw_slot.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/qxl/extr_qxl_kms.c_setup_hw_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qxl_device = type { %struct.TYPE_6__*, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, i64 }
%struct.qxl_memslot = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qxl_device*, %struct.qxl_memslot*)* @setup_hw_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_hw_slot(%struct.qxl_device* %0, %struct.qxl_memslot* %1) #0 {
  %3 = alloca %struct.qxl_device*, align 8
  %4 = alloca %struct.qxl_memslot*, align 8
  store %struct.qxl_device* %0, %struct.qxl_device** %3, align 8
  store %struct.qxl_memslot* %1, %struct.qxl_memslot** %4, align 8
  %5 = load %struct.qxl_memslot*, %struct.qxl_memslot** %4, align 8
  %6 = getelementptr inbounds %struct.qxl_memslot, %struct.qxl_memslot* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.qxl_device*, %struct.qxl_device** %3, align 8
  %9 = getelementptr inbounds %struct.qxl_device, %struct.qxl_device* %8, i32 0, i32 1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  store i64 %7, i64* %12, align 8
  %13 = load %struct.qxl_memslot*, %struct.qxl_memslot** %4, align 8
  %14 = getelementptr inbounds %struct.qxl_memslot, %struct.qxl_memslot* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.qxl_memslot*, %struct.qxl_memslot** %4, align 8
  %17 = getelementptr inbounds %struct.qxl_memslot, %struct.qxl_memslot* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %15, %18
  %20 = load %struct.qxl_device*, %struct.qxl_device** %3, align 8
  %21 = getelementptr inbounds %struct.qxl_device, %struct.qxl_device* %20, i32 0, i32 1
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i64 %19, i64* %24, align 8
  %25 = load %struct.qxl_device*, %struct.qxl_device** %3, align 8
  %26 = load %struct.qxl_device*, %struct.qxl_device** %3, align 8
  %27 = getelementptr inbounds %struct.qxl_device, %struct.qxl_device* %26, i32 0, i32 0
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.qxl_memslot*, %struct.qxl_memslot** %4, align 8
  %32 = getelementptr inbounds %struct.qxl_memslot, %struct.qxl_memslot* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = add nsw i64 %30, %33
  %35 = call i32 @qxl_io_memslot_add(%struct.qxl_device* %25, i64 %34)
  ret void
}

declare dso_local i32 @qxl_io_memslot_add(%struct.qxl_device*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
